# mpd-cast

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  setup.py
mpd_cast/: .gitignore  mpd.py  web.py
mpd_cast/templates/: google-cast.html
tests/: e2e.py
